# quake3-log-analyser

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  README.md
app/src/: command_line.rs  main.rs
bll/: Cargo.toml  README.md
bll-api/: Cargo.toml  README.md
bll-api/src/: config.rs  lib.rs
bll/src/: config.rs  lib.rs  summary.rs  summary_logic.rs
bll/src/dtos/: analysed_event.rs  logic_events.rs  mod.rs
common/: Cargo.toml  README.md
common/benches/: iterators_and_streams.rs
common/src/: lib.rs  types.rs
dal/: Cargo.toml  README.md
dal-api/: Cargo.toml  README.md
dal-api/src/: config.rs  lib.rs
dal/src/: async_file_reader.rs  events_translation.rs  factory.rs  lib.rs  stdin_reader.rs  sync_file_reader.rs  sync_reader.rs
dal/src/deserializer/: mod.rs
dal/src/sync_file_reader/: mod.rs
frontend/: Cargo.toml
model/: Cargo.toml  README.md
model/src/: lib.rs  quake3_events.rs  quake3_logs.rs  report.rs
presentation/: Cargo.toml  README.md
presentation/src/: config.rs  lib.rs
quake3-server-events/: Cargo.toml  README.md
quake3-server-events/src/: deserializer.rs  deserializer_logs.rs  lib.rs  model.rs  types.rs
quake3-server-log/: Cargo.toml
quake3-server-log/benches/: parsing_strategies.rs
quake3-server-log/src/: deserializer.rs  model.rs
