[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
dal-api = { path = "../dal-api" }
dal = { path = "../dal" }
bll-api = { path = "../bll-api" }
bll = { path = "../bll" }
presentation = { path = "../presentation" }

# command-line parsing
structopt    = "0.3"       # command line parsing
strum        = "0.25"      # enums serialization/deserialization
strum_macros = "0.25"

simple_logger = {version = "4.2", features = ["stderr"]}   # a dirty and nice console logger