[package]
name = "bll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common" }
model = { path = "../model" }
dal-api = { path = "../dal-api" }
quake3-server-log = { path = "../quake3-server-events" }

log = { version = "0.4", features = [] }

# gives us `Stream`
futures = "0.3"


[dev-dependencies]

# for integration tests
dal = { path = "../dal" }