[package]
name = "dal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common" }
model = { path = "../model" }
quake3-server-events = { path = "../quake3-server-events" }

# gives us `Stream`
futures = "0.3"
