[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

model = { path = "../model" }
dal-api = { path = "../dal-api" }

# log file parsing
regex   = "1.10"

# gives us `Stream`
futures = "0.3"

once_cell = "1"         # for runtime constants

