[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

model = { path = "../model" }

log = { version = "0.4", features = [] }

# gives us `Stream`
futures = "0.3"


[dev-dependencies]

# json serialization to validate the reported outputs in tests
serde = "1"
serde_json = "1"